--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,11 @@ openai
 llama-index
 llama-index-llms-openai
 nltk
-PyPDF2
-striprtf
-chardet
 transformers
 s3fs
 st-files-connection
 streamlit-authenticator
 extra-streamlit-components
 docx2txt
+Pygments
+markdown
