--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit
-openai
-llama-index
-llama-index-llms-openai
-nltk
-transformers
-s3fs
-st-files-connection
-streamlit-authenticator
-docx2txt
-Pygments
-markdown
-streamlit-cookies-manager
-pinecone
-llama-index-vector-stores-pinecone
-emoji
+streamlit==1.38.0
+openai==1.55.3
+llama-index==0.12.2
+llama-index-llms-openai==0.3.2
+nltk==3.9.1
+transformers==4.44.2
+s3fs==2024.9.0
+st-files-connection==0.1.0
+streamlit-authenticator==0.4.1
+docx2txt==0.8
+Pygments==2.16.1
+markdown==3.7
+streamlit-cookies-manager==0.2.0
+pinecone==5.3.1
+llama-index-vector-stores-pinecone==0.2.1
+emoji==2.14.0
