--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -11,3 +11,6 @@ backgroundColor="#F5FFF9"  # Light Green
 secondaryBackgroundColor="#E0F2E9"  # Lighter pale green
 textColor="#003418"  # Dark Green
 font="sans serif"
+
+[ui]
+hideTopBar = true
