--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ google-cloud-speech==2.31.0
 weasyprint==64.1
 matplotlib==3.10.0
 streamlit-equation-editor==0.3.6
+fastapi==0.112.2
+uvicorn==0.30.6
+python-multipart==0.0.6
