--- a/nginx.conf
+++ b/nginx.conf
@@ -13,17 +13,21 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
   
-  # Logging Settings
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+  # Logging Settings - more verbose for debugging
+  log_format detailed '$remote_addr - $remote_user [$time_local] '
+                      '"$request" $status $body_bytes_sent '
+                      '"$http_referer" "$http_user_agent" '
+                      '$request_time $upstream_response_time $pipe';
+  access_log /var/log/nginx/access.log detailed;
+  error_log /var/log/nginx/error.log debug;
 
   server {
-    listen $PORT;
+    listen $PORT default_server;
     server_name _;
     
     # Main Streamlit app
     location / {
-      proxy_pass http://127.0.0.1:8501;
+      proxy_pass http://0.0.0.0:8501;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
@@ -32,16 +36,24 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_buffering off;
+      proxy_read_timeout 300s;
     }
     
-    # API endpoints
+    # API endpoints - Critical: use 0.0.0.0 instead of 127.0.0.1
     location /api/ {
-      proxy_pass http://127.0.0.1:8000/;
+      proxy_pass http://0.0.0.0:8000/;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_read_timeout 300s;
+    }
+
+    # Health check endpoint
+    location /health {
+      access_log off;
+      return 200 "healthy\n";
     }
   }
 } 
