simplified api creation

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,12 +13,16 @@ http {
   include /etc/nginx/mime.types;
   default_type application/octet-stream;
   
-  # Logging Settings
+  # Logging Settings - More verbose to help debug issues
   access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+  error_log /var/log/nginx/error.log debug;
+
+  # Default error handler
+  proxy_intercept_errors off;
+  proxy_read_timeout 300s;
 
   server {
-    listen $PORT;
+    listen $PORT default_server;
     server_name _;
     
     # Main Streamlit app
@@ -34,9 +38,25 @@ http {
       proxy_buffering off;
     }
     
-    # API endpoints
+    # API endpoints - Fixed to make sure paths are correct
     location /api/ {
+      # Remove the /api prefix when forwarding to the backend
       proxy_pass http://127.0.0.1:8000/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_connect_timeout 10s;
+      proxy_read_timeout 30s;
+      proxy_send_timeout 30s;
+    }
+    
+    # Direct API access (alternative endpoint)
+    location /direct-api/ {
+      # Keep the path when forwarding
+      rewrite ^/direct-api/(.*) /$1 break;
+      proxy_pass http://127.0.0.1:8000;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
